# sentinel

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
deploy/: README.md  fly.toml
docs/: analyze.md  how-it-works.md  methodology.md  sample-outputs.md  usage.md
src/sentinel/: __init__.py  __main__.py  cli.py  config.py
src/sentinel/analyze/: __init__.py  analysis.py  render.py
src/sentinel/backtest/: __init__.py  engine.py  sizing.py
src/sentinel/cli/: __init__.py  analysis.py  analyze.py  demo.py  features.py  ingest.py  modeling.py  schedule.py
src/sentinel/evaluation/: __init__.py  ablation.py  importance.py  regimes.py  walk_forward.py
src/sentinel/features/: __init__.py  finbert.py  pipeline.py  sentiment.py  targets.py  technical.py
src/sentinel/fundamental/: __init__.py  competitive.py  grades.py  insiders.py  price_history.py  quality.py  valuation.py
src/sentinel/ingestion/: __init__.py  crypto.py  market.py  mentions.py  reddit.py  twitter.py
src/sentinel/models/: __init__.py  baseline.py  gradient_boosted.py  registry.py
src/sentinel/reporting/: __init__.py  console.py
src/sentinel/scheduling/: __init__.py  registry.py  scheduler.py  spec.py
src/sentinel/storage/: __init__.py  base.py  duckdb_store.py  postgres_store.py
src/sentinel/tracking/: __init__.py  mlflow_tracker.py
src/sentinel/utils/: logging.py
tests/: conftest.py  test_ablation.py  test_analyze.py  test_backtest.py  test_cli.py  test_competitive.py  test_crypto.py  test_docker.py  test_features.py  test_finbert.py  test_gradient_boosted.py  test_importance.py  test_insiders.py  test_mentions.py  test_postgres_store.py  test_price_history.py  test_quality.py  test_reddit_ingestion.py  test_regimes.py  test_release_artifacts.py  test_scheduler.py  test_sentiment.py  test_sizing.py  test_storage.py  test_tracking.py  test_twitter.py  test_valuation.py
